Fix UI/subjects prequisite

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
+    "react-select": "^5.10.2",
     "recharts": "latest",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
